force-app/main/default/objects/Relacionamento__c/Relacionamento__c.object-meta.xml
<CustomObject>
    <label>Relacionamento</label>
    <nameField>
        <label>Nome do contato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relacionamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>