force-app/main/default/objects/Relacionamento__c/fields/Nome_da_base__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_base__c</fullName>
    <label>Nome da base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academias</fullName>
            </value>
            <value>
                <fullName>Conselho Geral do CIEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>