force-app/main/default/objects/Relacionamento__c/fields/Nome_fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nome_fantasia__c</fullName>
    <label>Nome fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>