force-app/main/default/objects/Relacionamento__c/fields/Telefone_Residencial__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Residencial__c</fullName>
    <label>Telefone Residencial</label>
    <type>Phone</type>
</CustomField>