force-app/main/default/objects/Relacionamento__c/fields/Tipo_da_base__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_base__c</fullName>
    <label>Tipo da base</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base de contatos</fullName>
            </value>
            <value>
                <fullName>Dados da internet</fullName>
            </value>
            <value>
                <fullName>Jornalistas</fullName>
            </value>
            <value>
                <fullName>Lista de presença</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>