force-app/main/default/objects/Relacionamento__c/fields/Tratamento__c.field-meta.xml
<CustomField>
    <fullName>Tratamento__c</fullName>
    <label>Tratamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>