force-app/main/default/objects/Relacionamento__c/listViews/Academias.listView-meta.xml
<ListView>
    <fullName>Academias</fullName>
    <columns>NAME</columns>
    <columns>Razao_Social__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nome_da_base__c</field>
        <operation>equals</operation>
        <value>Academias</value>
    </filters>
    <label>Academias</label>
    <sharedTo>
        <role>Bases_de_relacionamento</role>
    </sharedTo>
</ListView>