force-app/main/default/objects/Relacionamento__c/listViews/Conselhos_CIEE.listView-meta.xml
<ListView>
    <fullName>Conselhos_CIEE</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nome_da_base__c</field>
        <operation>equals</operation>
        <value>Conselho Geral do CIEE</value>
    </filters>
    <label>Conselhos CIEE</label>
    <sharedTo>
        <role>Bases_de_relacionamento</role>
    </sharedTo>
</ListView>