force-app/main/default/objects/Relacionamento__c/listViews/One_Relacionamento.listView-meta.xml
<ListView>
    <fullName>One_Relacionamento</fullName>
    <filterScope>Queue</filterScope>
    <label>One</label>
    <queue>One</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>